--- a/css/style.sass
+++ b/css/style.sass
@@ -731,16 +731,22 @@ body
         width: 212px
         height: 48px
         background-color: #f16d7f
-        border: transparent
+        border: 1px solid transparent
         font-size: 16px
         line-height: 54px
         font-weight: 700
         letter-spacing: 0.025em
         color: #ffffff
+        cursor: pointer
 
         & .fa
             font-size: 15px
             margin-left: 9px
+
+        &:hover
+            background-color: #ffffff
+            color: #f16d7f
+            border: 1px solid #f16d7f
 
 .shop-info
     margin: 113px auto 97px
