--- a/css/style.css
+++ b/css/style.css
@@ -612,9 +612,6 @@ body {
 }
 
 .slider > .container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   height: 614px;
 }
 
@@ -627,37 +624,29 @@ body {
   object-position: right -51px;
 }
 
+.slider__text-box {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  padding-left: 12px;
+  margin-top: 224px;
+  border-left: 12px solid #f16d7f;
+  float: left;
+}
+
 .slider__text {
-  font-size: 38px;
-  line-height: 1.2;
+  font-size: 40px;
+  line-height: 31px;
   font-weight: 900;
-  letter-spacing: 0.025em;
+  letter-spacing: 1px;
   color: #222222;
   text-transform: uppercase;
-  -ms-flex-item-align: center;
-  -ms-grid-row-align: center;
-  align-self: center;
-  padding-left: 24px;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  width: 100%;
-  position: relative;
 }
 
-.slider__text::before {
-  content: '';
-  display: block;
-  width: 12px;
-  height: 94px;
-  background: #f16d7f;
-  position: absolute;
-  left: 0;
-  top: 15px;
-}
-
-.slider__text b {
+.slider__text-big {
   font-size: 60px;
-  font-weight: 900;
+  letter-spacing: 1.5px;
+  margin-bottom: 20px;
+  line-height: 45px;
 }
 
 .slider__text span {
@@ -754,32 +743,42 @@ body {
 }
 
 .fetured-items__card {
-  max-width: 261px;
-  cursor: pointer;
+  width: 261px;
+  position: relative;
 }
 
 .fetured-items__card:nth-child(-n+4) {
   margin-bottom: 39px;
 }
 
+.fetured-items__card-link {
+  display: block;
+}
+
 .fetured-items__card-img {
-  position: relative;
+  width: 100%;
+}
+
+.fetured-items__card-img img {
+  display: block;
 }
 
 .fetured-items__card-cart-button {
   position: absolute;
+  display: none;
   top: 98px;
   left: 0;
   right: 0;
-  display: none;
-  width: 123px;
-  height: 39px;
+  pointer-events: none;
+}
+
+.fetured-items__card-cart-button-link {
+  padding: 10px 12px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   background-color: transparent;
   border: 1px solid #ffffff;
-  font-size: 13px;
-  line-height: 1.2;
-  font-weight: 700;
-  color: #ffffff;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -787,12 +786,24 @@ body {
       -ms-flex-pack: center;
           justify-content: center;
   margin: 0 auto;
-  cursor: pointer;
+  pointer-events: all;
+}
+
+.fetured-items__card-cart-button-link:hover {
+  -webkit-box-shadow: 0 0 10px #ffffff;
+          box-shadow: 0 0 10px #ffffff;
 }
 
 .fetured-items__card-cart-button-img {
   margin-right: 8px;
   width: 23px;
+}
+
+.fetured-items__card-cart-button-text {
+  font-size: 13px;
+  line-height: 1.2;
+  font-weight: 700;
+  color: #ffffff;
 }
 
 .fetured-items__card-text {
@@ -855,16 +866,15 @@ body {
 }
 
 .fetured-items__browse-all {
-  width: 212px;
-  height: 48px;
   background-color: #f16d7f;
   border: 1px solid transparent;
   font-size: 16px;
-  line-height: 54px;
+  line-height: 16px;
   font-weight: 700;
   letter-spacing: 0.025em;
   color: #ffffff;
   cursor: pointer;
+  padding: 18px 20px 18px 24px;
 }
 
 .fetured-items__browse-all .fa {
@@ -887,6 +897,7 @@ body {
 }
 
 .shop-info__banner {
+  display: block;
   position: relative;
   width: 767px;
   height: 529px;
@@ -1008,6 +1019,7 @@ body {
   -webkit-transition: all .4s ease;
   transition: all .4s ease;
   bottom: 0;
+  cursor: pointer;
 }
 
 .subscribe__quote-sliders-controls-button:nth-of-type(1) {
@@ -1091,7 +1103,7 @@ body {
   text-transform: capitalize;
 }
 
-.subscribe__form {
+.subscribe__form-box {
   width: 569px;
   font-size: 14px;
   font-weight: 400;
@@ -1124,7 +1136,7 @@ body {
   text-transform: uppercase;
 }
 
-.subscribe__form-fieldset {
+.subscribe__form {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1181,6 +1193,7 @@ body {
   font-size: 14px;
   font-weight: 400;
   letter-spacing: 0.025em;
+  cursor: pointer;
 }
 
 .subscribe__form-submit:hover {
@@ -1267,7 +1280,14 @@ body {
           align-items: center;
 }
 
+.copyrights__social-media {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
 .copyrights__social-media-button {
+  display: block;
   width: 32px;
   height: 32px;
   cursor: pointer;
@@ -1277,6 +1297,17 @@ body {
   color: #b2b2b2;
   background: #ffffff;
   border: 1px solid transparent;
+  text-align: center;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.copyrights__social-media-button > .fa {
+  vertical-align: middle;
+}
+
+.copyrights__social-media-button:not(:last-of-type) {
+  margin-right: 8px;
 }
 
 .copyrights__social-media-button:hover {
